force-app/main/default/objects/Floor__c/Floor__c.object-meta.xml
<CustomObject>
    <label>Floor</label>
    <nameField>
        <label>Floor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>