force-app/main/default/objects/Floor__c/fields/FloorCode__c.field-meta.xml
<CustomField>
    <fullName>FloorCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>รหัส Floor</description>
    <externalId>true</externalId>
    <label>Floor Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>